--- a/api-reference/ask/ask-for-action.mdx
+++ b/api-reference/ask/ask-for-action.mdx
@@ -34,23 +34,24 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
   The response of the user.
 </ResponseField>
 
-### Usage
+### Example
 
-```python Code Example
+```python
 import chainlit as cl
+
 
 @cl.on_chat_start
 async def main():
-  res = await cl.AskActionMessage(
-    content="Pick an action!",
-    actions=[
-      cl.Action(name="continue", value="continue", label="✅ Continue"),
-      cl.Action(name="cancel", value="cancel", label="❌ Cancel")
-    ]
-  ).send()
-
-  if res and res.get("value") == "continue":
-    await cl.Message(
-      content="Continue!",
+    res = await cl.AskActionMessage(
+        content="Pick an action!",
+        actions=[
+            cl.Action(name="continue", value="continue", label="✅ Continue"),
+            cl.Action(name="cancel", value="cancel", label="❌ Cancel"),
+        ],
     ).send()
+
+    if res and res.get("value") == "continue":
+        await cl.Message(
+            content="Continue!",
+        ).send()
 ```
