--- a/api-reference/elements/file.mdx
+++ b/api-reference/elements/file.mdx
@@ -6,7 +6,7 @@ The `File` class allows you to display a button that lets users download the con
 
 You must provide either an url or a path or content bytes.
 
-### Attributes
+## Attributes
 
 <ParamField path="name" type="str">
   The name of the file. This will be shown to users.
@@ -24,9 +24,9 @@ You must provide either an url or a path or content bytes.
   The file content of the file image in bytes format.
 </ParamField>
 
-### Usage
+## Example
 
-```python Code Example
+```python
 import chainlit as cl
 
 
