--- a/api-reference/elements/plotly.mdx
+++ b/api-reference/elements/plotly.mdx
@@ -6,7 +6,7 @@ The `Plotly` class allows you to display a Plotly chart in the chatbot UI. This 
 
 The advantage of the `Plotly` element over the `Pyplot` element is that it's interactive (the user can zoom on the chart for example).
 
-### Attributes
+## Attributes
 
 <ParamField path="name" type="str">
   The name of the chart to be displayed in the UI.
@@ -26,7 +26,7 @@ The advantage of the `Plotly` element over the `Pyplot` element is that it's int
   The `plotly.graph_objects.Figure` instance that you want to display.
 </ParamField>
 
-### Usage with message scope
+### Example
 
 ```python
 import plotly.graph_objects as go
@@ -42,22 +42,4 @@ async def start():
     elements = [cl.Plotly(name="chart", figure=fig, display="inline")]
 
     await cl.Message(content="This message has a chart", elements=elements).send()
-```
-
-### Usage without scope
-
-```python
-import plotly.graph_objects as go
-import chainlit as cl
-
-
-@cl.on_chat_start
-async def start():
-    fig = go.Figure(
-        data=[go.Bar(y=[2, 1, 3])],
-        layout_title_text="An example figure",
-    )
-    cl.Plotly(name="chart", figure=fig, display="side").send()
-
-    await cl.Message(content="This message has a chart").send()
 ```
