--- a/get-started/pure-python.mdx
+++ b/get-started/pure-python.mdx
@@ -53,4 +53,16 @@ The `-w` flag tells Chainlit to enable auto-reloading, so you don't need to rest
 
 ## Next Steps
 
-Congratulations! You've just created your first Chainlit application using pure Python. From here, you can add [elements](/chat-experience/elements), [actions](/chat-experience/actions) and [integrate with LLMs](/examples/openai-sql) to create a more sophisticated app. Happy coding! 🎉
+<CardGroup cols={2}>
+  <Card title="Concepts" icon="lightbulb" color="#ea5a0c" href="/concepts">
+    Learn about the core concepts of Chainlit
+  </Card>
+  <Card
+    title="Cookbook"
+    icon="book"
+    color="#0285c7"
+    href="https://github.com/Chainlit/cookbook"
+  >
+    Explore the Chainlit cookbook for more examples
+  </Card>
+</CardGroup>
