--- a/ui-customisation/custom-logo-and-favicon.mdx
+++ b/ui-customisation/custom-logo-and-favicon.mdx
@@ -1,5 +1,5 @@
 ---
-title: Custom Logo and Favicon
+title: Logo and Favicon
 ---
 
 You can customize the Chainlit application with your own logo and favicon.
