--- a/api-reference/ask/ask-for-file.mdx
+++ b/api-reference/ask/ask-for-file.mdx
@@ -16,7 +16,7 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
   More infos here https://react-dropzone.org/#!/Accepting%20specific%20file%20types.
 </ParamField>
 <ParamField path="max_size_mb" type="int" optional>
-  Maximum file size in MB. Defaults to 2. Max 100.
+  Maximum file size in MB. Defaults to 2.
 </ParamField>
 <ParamField path="max_files" type="int" optional>
   Maximum number of files to upload. Defaults to 1. Maximum value is 10.
@@ -34,9 +34,9 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
   The files uploaded by the user.
 </ResponseField>
 
-### Usage
+### Example
 
-```python Code Example
+```python Ask for a text file
 import chainlit as cl
 
 
@@ -49,19 +49,22 @@ async def start():
         files = await cl.AskFileMessage(
             content="Please upload a text file to begin!", accept=["text/plain"]
         ).send()
-    # Decode the file
+
     text_file = files[0]
-    text = text_file.content.decode("utf-8")
+
+    with open(text_file.path, "r", encoding="utf-8") as f:
+        text = f.read()
 
     # Let the user know that the system is ready
     await cl.Message(
         content=f"`{text_file.name}` uploaded, it contains {len(text)} characters!"
     ).send()
+
 ```
 
 You can also pass a dict to the `accept` parameter to precise the file extension for each mime type:
 
-```python Code Example
+```python Ask for a python file
 import chainlit as cl
 
 file = await cl.AskFileMessage(
