--- a/api-reference/elements/audio.mdx
+++ b/api-reference/elements/audio.mdx
@@ -6,15 +6,15 @@ The `Audio` class allows you to display an audio player for a specific audio fil
 
 You must provide either an url or a path or content bytes.
 
-### Attributes
+## Attributes
 
 <ParamField path="name" type="str">
   The name of the audio file to be displayed in the UI. This is shown to users.
 </ParamField>
 
 <ParamField path="display" type="ElementDisplay" optional>
-  Determines where the element should be displayed in the UI. Choices are
-  "side" (default), "inline", or "page".
+  Determines where the element should be displayed in the UI. Choices are "side"
+  (default), "inline", or "page".
 </ParamField>
 
 <ParamField path="url" type="str" optional>
@@ -29,10 +29,9 @@ You must provide either an url or a path or content bytes.
   The file content of the audio in bytes format.
 </ParamField>
 
+## Example
 
-### Usage with message scope
-
-```python Code Example
+```python
 import chainlit as cl
 
 
@@ -44,19 +43,5 @@ async def main():
     await cl.Message(
         content="Here is an audio file",
         elements=elements,
-    ).send()
-```
-
-### Usage without scope
-
-```python Code Example
-import chainlit as cl
-
-
-@cl.on_chat_start
-async def main():
-    await cl.Audio(name="example.mp3", path="./example.mp3", display="side").send()
-    await cl.Message(
-        content="Here is the example.mp3 audio file",
     ).send()
 ```
