--- a/api-reference/elements/avatar.mdx
+++ b/api-reference/elements/avatar.mdx
@@ -8,7 +8,7 @@ You need to send the element once. Next if the name of an avatar matches the nam
 
 You must provide either an url or a path or content bytes.
 
-### Attributes
+## Attributes
 
 <ParamField path="name" type="str">
   The name of the avatar. This will be used to replace author names.
@@ -26,9 +26,9 @@ You must provide either an url or a path or content bytes.
   The file content of the avatar image in bytes format.
 </ParamField>
 
-### Usage
+## Example
 
-```python Code Example
+```python
 import chainlit as cl
 
 
