--- a/api-reference/elements/pdf.mdx
+++ b/api-reference/elements/pdf.mdx
@@ -4,7 +4,7 @@ title: "PDF viewer"
 
 The `Pdf` class allows you to display a PDF hosted remotely or locally in the chatbot UI. This class either takes a URL of a PDF hosted online, or the path of a local PDF.
 
-### Attributes
+## Attributes
 
 <ParamField path="name" type="str">
   The name of the PDF to be displayed in the UI.
@@ -16,11 +16,13 @@ The `Pdf` class allows you to display a PDF hosted remotely or locally in the ch
 </ParamField>
 
 <ParamField path="url" type="str">
-  The remote URL of the PDF file. Must provide url for a remote PDF (or either path or content for a local PDF).
+  The remote URL of the PDF file. Must provide url for a remote PDF (or either
+  path or content for a local PDF).
 </ParamField>
 
 <ParamField path="path" type="str" optional>
-  The local file path of the PDF. Must provide either path or content for a local PDF (or url for a remote PDF).
+  The local file path of the PDF. Must provide either path or content for a
+  local PDF (or url for a remote PDF).
 </ParamField>
 
 <ParamField path="content" type="bytes" optional>
@@ -28,31 +30,18 @@ The `Pdf` class allows you to display a PDF hosted remotely or locally in the ch
   content for a local PDF (or url for a remote PDF).
 </ParamField>
 
-### Usage with message scope
+## Example
 
-```python Code Example
+```python
 import chainlit as cl
 
-# Sending a pdf with the local file path
-elements = [
-  cl.Pdf(name="pdf1", display="inline", path="./pdf1.pdf")
-]
 
-cl.Message(content="Look at this local pdf!", elements=elements).send()
-```
+@cl.on_chat_start
+async def main():
+    # Sending a pdf with the local file path
+    elements = [
+      cl.Pdf(name="pdf1", display="inline", path="./pdf1.pdf")
+    ]
 
-### Usage without scope
-
-```python Code Example
-import chainlit as cl
-
-# Sending a pdf with the remote url
-pdf1 = cl.Pdf(name="pdf1", display="inline", url="https://example.com/example.pdf")
-pdf1.send()
-
-# Sending a pdf with file content as bytes
-with open("./pdf2.pdf", "rb") as f:
-    pdf_content = f.read()
-    pdf2 = cl.Pdf(name="pdf2", display="inline", content=pdf_content)
-    pdf2.send()
+    cl.Message(content="Look at this local pdf!", elements=elements).send()
 ```
