--- a/backend/config/overview.mdx
+++ b/backend/config/overview.mdx
@@ -9,7 +9,7 @@ It is composed of three sections:
 <CardGroup cols={2}>
   <Card
     title="project"
-    icon="shield"
+    icon="rocket-launch"
     color="#ea5a0c"
     href="/backend/config/project"
   >
