--- a/customisation/overview.mdx
+++ b/customisation/overview.mdx
@@ -4,14 +4,14 @@ Title: Overview
 
 You can tailor your Chainlit Application to reflect your organization's branding or personal style. Our intention is to provide a good level of customization to ensure a consistent user experience that aligns with your visual guidelines.
 
-In this documentation we will go through the different options available.
+In this section we will go through the different options available.
 
 <CardGroup cols={2}>
   <Card
     title="Custom Logo and Favicon"
     icon="image"
     color="#ea5a0c"
-    href="/ui-customisation/custom-logo-and-favicon"
+    href="/customisation/custom-logo-and-favicon"
   >
     Learn how to display your own logo and favicon
   </Card>
@@ -19,7 +19,7 @@ In this documentation we will go through the different options available.
     title="Custom CSS"
     icon="paint-roller"
     color="#0285c7"
-    href="/ui-customisation/custom-css"
+    href="/customisation/custom-css"
   >
     Learn how to provide your own CSS stylesheet.
   </Card>
@@ -27,7 +27,7 @@ In this documentation we will go through the different options available.
     title="Theme"
     icon="palette"
     color="#16a34a"
-    href="/ui-customisation/theme"
+    href="/customisation/theme"
   >
     Learn about creating your own theme.
   </Card>
