--- a/data-persistence/enterprise.mdx
+++ b/data-persistence/enterprise.mdx
@@ -5,7 +5,8 @@ title: Enterprise
 If your organization can't use third party cloud services for data hosting, we can provide your company with a self-hostable Chainlit Cloud docker image (under commercial license).
 
 <Note>
-  To request access you can contact us here -> https://forms.gle/BX3UNBLmTF75KgZVA.
+  To request access you can contact us here ->
+  https://forms.gle/BX3UNBLmTF75KgZVA.
 </Note>
 
 ## Define your Chainlit Server
@@ -27,6 +28,6 @@ CHAINLIT_SERVER="https://cloud.your_chainlit.io" chainlit run main.py
 
 ## Activating Cloud Mode
 
-Using your own Chainlit Cloud instance, you will need to provide a valid API key to persist the data as described in [Data Persistence Getting Started](/cloud/persistence/getting-started). 
+Using your own Chainlit Cloud instance, you will need to provide a valid API key to persist the data as described in [Data Persistence Getting Started](/cloud/persistence/getting-started).
 
 Once activated, your chats and elements will be stored in your own Cloud.
