--- a/data-persistence/feedback.mdx
+++ b/data-persistence/feedback.mdx
@@ -3,7 +3,10 @@ title: Human Feedback
 ---
 
 Human feedback is a crucial part of developing your LLM app or agent.
-It allows your users to provide direct feedback on the interaction, which can be used to improve the performance and accuracy of your system. By enabling data persistence, each message sent by your application will be accompanied by thumbs up and thumbs down icons. Users can also add a text comment to their feedback for more detailed input.
+
+It allows your users to provide direct feedback on the interaction, which can be used to improve the performance and accuracy of your system.
+
+By enabling data persistence, each message sent by your application will be accompanied by thumbs up and thumbs down icons. Users can also add a text comment to their feedback for more detailed input.
 
 <Frame caption="Feedback with comment">
   <img src="/images/feedback.jpeg" />
@@ -26,8 +29,8 @@ To use human feedback, you first need to enable [data persistence](/cloud/persis
 Once data persistence is enabled, each message sent by your application will be accompanied by thumbs up and thumbs down icons. Users can click these icons to provide feedback on the interaction.
 
 <Note>
-  You can disable human feedback for a specific
-  [Message](/api-reference/message) by passing `disable_human_feedback=True`.
+  You can disable human feedback for a specific [Message](/concepts/message) by
+  passing `disable_feedback=True`.
 </Note>
 
 <Frame caption="Human feedback">
