--- a/data-persistence/history.mdx
+++ b/data-persistence/history.mdx
@@ -8,8 +8,8 @@ Chat history allow users to search and browse their past conversations.
 
 To enable chat history, you need to enable:
 
-- [data persistence](/cloud/persistence/getting-started)
-- [authentication](/authentication)
+1. [Data persistence](/data-persistence/overview)
+2. [Authentication](/authentication)
 
 <Frame caption="Chat History">
   <img src="/images/history.gif" />
