--- a/guides/iframe.mdx
+++ b/guides/iframe.mdx
@@ -2,9 +2,7 @@
 title: Embed in Iframe
 ---
 
-# Embedding Chatbot Interface Using `<iframe>`
-
-This document outlines the steps and specifications for embedding the external Chatbot UI, provided by Chainlit, into an existing frontend service. This integration is achieved using an HTML `<iframe>`. Below we detail the properties and considerations that need attention.
+This section outlines the steps and specifications for embedding the external Chatbot UI, provided by Chainlit, into an existing frontend service. This integration is achieved using an HTML `<iframe>`. Below we detail the properties and considerations that need attention.
 
 ## Overview
 
