--- a/api-reference/chat-profiles.mdx
+++ b/api-reference/chat-profiles.mdx
@@ -10,13 +10,13 @@ The icon is optional.
 
 ### Parameters
 
-<ParamField path="current_user" type="AppUser">
+<ParamField path="current_user" type="User">
   The message coming from the UI.
 </ParamField>
 
 ### Usage
 
-```python Simple code example
+```python Simple example
 import chainlit as cl
 
 
@@ -43,58 +43,48 @@ async def on_chat_start():
     ).send()
 ```
 
-```python Code example with authentication
+```python With authentication
 from typing import Optional
 
 import chainlit as cl
 
 
 @cl.set_chat_profiles
-async def chat_profile(current_user: cl.AppUser):
-    if "admin_user" not in current_user.tags:
-        # Default to 3.5 when not admin
-        return [
-            cl.ChatProfile(
-                name="GPT-3.5",
-                markdown_description="The underlying LLM model is **GPT-3.5**.",
-                icon="https://picsum.photos/200",
-            )
-        ]
+async def chat_profile(current_user: cl.User):
+    if current_user.metadata["role"] != "ADMIN":
+        return None
 
     return [
         cl.ChatProfile(
             name="GPT-3.5",
-            markdown_description="The underlying LLM model is **GPT-3.5**.",
-            icon="https://picsum.photos/200",
+            markdown_description="The underlying LLM model is **GPT-3.5**, a *175B parameter model* trained on 410GB of text data.",
         ),
         cl.ChatProfile(
             name="GPT-4",
-            markdown_description="The underlying LLM model is **GPT-4**.",
+            markdown_description="The underlying LLM model is **GPT-4**, a *1.5T parameter model* trained on 3.5TB of text data.",
             icon="https://picsum.photos/250",
+        ),
+        cl.ChatProfile(
+            name="GPT-5",
+            markdown_description="The underlying LLM model is **GPT-5**.",
+            icon="https://picsum.photos/200",
         ),
     ]
 
 
 @cl.password_auth_callback
-def auth_callback(username: str, password: str) -> Optional[cl.AppUser]:
+def auth_callback(username: str, password: str) -> Optional[cl.User]:
     if (username, password) == ("admin", "admin"):
-        return cl.AppUser(
-            username="admin", role="ADMIN", provider="credentials", tags=["admin_user"]
-        )
-    elif (username, password) == ("test", "test"):
-        return cl.AppUser(
-            username="test", role="USER", provider="credentials", tags=["regular_user"]
-        )
+        return cl.User(identifier="admin", metadata={"role": "ADMIN"})
     else:
         return None
 
 
-
 @cl.on_chat_start
 async def on_chat_start():
-    app_user = cl.user_session.get("user")
+    user = cl.user_session.get("user")
     chat_profile = cl.user_session.get("chat_profile")
     await cl.Message(
-        content=f"starting chat with {app_user.username} using the {chat_profile} chat profile"
+        content=f"starting chat with {user.identifier} using the {chat_profile} chat profile"
     ).send()
 ```
