--- a/authentication/overview.mdx
+++ b/authentication/overview.mdx
@@ -2,37 +2,11 @@
 title: Overview
 ---
 
-When you create a Chainlit app, you can choose to enable authentication. This will add a login page to your app. Only authenticated users will be able to access your app.
+Chainlit applications are public by default.
+To enable authentication and make your app private, you need to:
 
-The authentication system is flexible with callbacks. This enables you to adapt the authentication to your needs.
-
-Each Chainlit app has an independent authentication system. It has nothing to do with Chainlit cloud authentication.
-
-## Configuration
-
-To enable authentication, you need to create one of the authentication callbacks in your app, depending on your chosen authentication method. You can add multiple callbacks to enable multiple authentication methods.
-
-You also need to define the `CHAINLIT_AUTH_SECRET` environment variable. This is a secret string that is used to sign the authentication tokens. You can change it at any time, but it will log out all users. You can easily generate it using `chainlit create-secret`.
-
-The callbacks take an input that depends on the authentication method, and they return an optional `AppUser` object. If the callback returns `None`, the authentication is considered as failed. If it returns an `AppUser` object, the authentication is considered as successful. The `AppUser` object is then stored in the session.
-
-The callback can be sync or async, the annotation can handle either.
-
-<Warning>
-  Make sure each user has a unique username to prevent them from sharing their
-  session.
-</Warning>
-
-## Get the current authenticated user
-
-You can access the current authenticated user through the [user_session](/backend/user-session).
-
-```py
-@cl.on_chat_start
-async def on_chat_start():
-    app_user = cl.user_session.get("user")
-    await cl.Message(f"Hello {app_user.username}").send()
-```
+1. Define a `CHAINLIT_AUTH_SECRET` environment variable. This is a secret string that is used to sign the authentication tokens. You can change it at any time, but it will log out all users. You can easily generate one using `chainlit create-secret`.
+2. Add one or more authentication callbacks to your app:
 
 <CardGroup cols={2}>
   <Card
@@ -60,3 +34,21 @@ async def on_chat_start():
     Authenticate users based on a custom header.
   </Card>
 </CardGroup>
+
+Each callback take a different input and optionally return a `cl.User` object. If the callback returns `None`, the authentication is considered as failed.
+
+<Warning>
+  Make sure each user has a unique identifier to prevent them from sharing their
+  data.
+</Warning>
+
+## Get the current authenticated user
+
+You can access the current authenticated user through the [User Session](/concepts/user-session).
+
+```py
+@cl.on_chat_start
+async def on_chat_start():
+    app_user = cl.user_session.get("user")
+    await cl.Message(f"Hello {app_user.identifier}").send()
+```
