--- a/data-persistence/overview.mdx
+++ b/data-persistence/overview.mdx
@@ -1,8 +1,29 @@
 ---
-title: Getting Started
+title: Overview
 ---
 
-Learn how to use Chainlit Cloud to set up data persistence in your Chainlit app.
+By default, your Chainlit app does not persist the chats and elements it generates. However, the ability to store and utilize this data can be a crucial part of your project or organization.
+
+Once enabled, data persistence will introduce new features to your application.
+
+<CardGroup cols={2}>
+  <Card
+    title="Chat History"
+    icon="clock-rotate-left"
+    color="#ea5a0c"
+    href="/data-persistence/history"
+  >
+    Learn more about Chat History.
+  </Card>
+  <Card
+    title="Human Feedback"
+    icon="thumbs-up"
+    color="#0285c7"
+    href="/data-persistence/feedback"
+  >
+    Learn more about Human Feedback.
+  </Card>
+</CardGroup>
 
 ## Create a Chainlit Project
 
@@ -31,16 +52,12 @@ CHAINLIT_API_KEY="your key" chainlit run main.py
 
 Once activated, your chats and elements will be persisted in Chainlit Cloud.
 
-## Chat history
-
-To enable chat history in your Chainlit app, you must setup data persistence AND [authentication](/authentication).
-
 ## Deactivation
 
 If you wish to deactivate data persistence, simply comment out or remove the `CHAINLIT_API_KEY` environment variable.
 
 ## Data privacy & security
 
-We prioritize your data's privacy and security. We understand how crucial the data fed into Chainlit Cloud is for your business and handle it with utmost care. 
+We prioritize your data's privacy and security. We understand how crucial the data fed into Chainlit Cloud is for your business and handle it with utmost care.
 
 Contact us for detailed information: contact@chainlit.io
