--- a/get-started/installation.mdx
+++ b/get-started/installation.mdx
@@ -23,10 +23,20 @@ This should spawn the chainlit UI and ask for your name like so:
 
 ## Next steps
 
-<Card title="In Pure Python" icon="link" href="/get-started/pure-python">
+<CardGroup cols={2}>
+<Card
+  title="In Pure Python"
+  color="#ea5a0c"
+  icon="python"
+  href="/get-started/pure-python">
   Learn on how to use Chainlit with any python code.
 </Card>
 
-<Card title="Integrations" icon="link" href="/integrations">
+<Card
+  title="Integrations"
+  color="#0285c7"
+  icon="link"
+  href="/integrations">
   Integrate Chainlit with other frameworks.
 </Card>
+</CardGroup>
