--- a/get-started/overview.mdx
+++ b/get-started/overview.mdx
@@ -18,11 +18,11 @@ Chainlit is an open-source Python package that makes it incredibly fast to build
 
 1. [Build fast:](/examples/openai-sql) Integrate seamlessly with an existing code base or start from scratch in minutes
 
-2. [Data persistence:](/chat-data/overview) Leverage user generated data + feedback.
+2. [Data persistence:](/data-persistence/overview) Leverage user generated data + feedback
 
-3. [Visualize multi-steps reasoning:](/observability-iteration/chain-of-thought) Understand the intermediary steps that produced an output at a glance
+3. [Visualize multi-steps reasoning:](/concepts/step) Understand the intermediary steps that produced an output at a glance
 
-4. [Iterate on prompts:](/observability-iteration/prompt-playground) Deep dive into prompts in the Prompt Playground to understand where things went wrong and iterate
+4. [Iterate on prompts:](/advanced-features/prompt-playground) Deep dive into prompts in the Prompt Playground to understand where things went wrong and iterate
 
 ## Integrations
 
